syntax = "proto3";

package proto;

option go_package = ".;proto";

service Keeper {
    rpc Register (registerRequest) returns (registerReply) {}
    rpc Confirm (KeeperEmpty) returns (KeeperConfirmReply) {}
}

message KeeperEmpty {}

message KeeperConfirmReply {
    string status = 1;
}

message registerRequest {
    string name = 1;
    string Host = 2;
    string Port = 3;
}

message registerReply {
    string status = 1;
}
